--- a/loginPageDesign/index.html
+++ b/loginPageDesign/index.html
@@ -22,8 +22,10 @@
 <img src="exam.png">
         
 <div class="banner">
+  <center>
 <p class="b1">Online Exam System</p>
 <p class="b2">"Some quote on studies or placement"</p>
+</center>
 </div>
         <div class="login">
 
@@ -42,13 +44,15 @@
                       <label for="exampleInputPassword1">Password</label>
                       <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                     </div>
-                    <div class="form-group form-check">
+                    <div class="form-group">
                       <a href="#">Forgot Password?</a>
                     </div>
                     <div style="text-align: center;">
                     <button class="but" type="submit" class="btn btn-primary">Login</button>
-                    <button class="but" type="submit" class="btn btn-primary">Register</button>
-                </div>
+                    </div>
+                    <div style="text-align: center; margin-top: 10px;">
+                    <a href="#">Don't have an account? Register Here!!</a>
+                    </div>
                   </form>
 
             </div>
